local-team/local-kubernetes-config/deployment/next-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-service
spec:
  selector:
    app: next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-deployment
  labels:
    app: next
spec:
  selector:
    matchLabels:
      app: next
  template:
    metadata:
      labels:
        app: next
    spec:
      containers:
        - name: kubernetes-frontend
          image: domhall/kubernetes-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 200m
