local-team/local-kubernetes-config/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: api-2-service
                port:
                  number: 80
            path: /api-2(/|$)(.*)
          - pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /api(/|$)(.*)
          - pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /static-frontend(/|$)(.*)
          - pathType: ImplementationSpecific
            backend:
              service:
                name: next-service
                port:
                  number: 80
            path: /()(.*)
